test/resource/wrong/resource2b.kk.out
[01;30moperator branch (heap) get-ref: resume tail
[00;39;49m[00mtest/resource/wrong/resource2b.kk(22, 3): error: type is not polymorph enough
 context : using heap
 term : using heap
 get-ref()
 inferred type : forall<s1> () -> (heap<s1>) ref<s1>
 is less polymorph as: forall<s1> () -> <heap<s1>|_e> ref<$s>